site/htdocs/avanty/style/avanty.css
@import url('fonts.css');
@import url('theme/jquery-ui.min.css');
@import url('theme/custom.css');
@import url('activate.css');
@import url('super.css');
@import url('login.css');

body.avanty {
	font-family: 'Open Sans', sans-serif;
	font-size: 1.5em;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100vh;
	background-color: white;
}

h1, h2, h3, h4, h5 {
	margin-top: 0;
}

h1 {
	margin-bottom: 0.5em;
}

.avanty .label, label, h1, h2, h3, h4, h5 {
	cursor: default;
    user-select: none;
    -webkit-user-select: none;
}

.numbers {
	font-family: 'Ubuntu Mono Regular', sans-serif !important;
}

/* for visual reference: */
.onboard {
	position: absolute;
	width: 100vw;
	height: 200px;
	top: calc(100vh - 200px);
	left: 0;
	display: block;
	z-index: 10000;
}

.onboard:hover {
	background-image: url('../img/onboard.png');
	background-color: rgba(0,0,0,0.125);
}

/* clock showing the date/time */
#clock {
	position: absolute;
	left: 64px;
	top: 8px;
	z-index: 10000;
}

#clock span {
	display: block;
	width: 100%;
	text-align: center;
	font-size: small;
}

#hourglass {
	display: none;
	position: absolute;
	left: calc(100vw - 3 * (48px + 8px) - 8px); /* 8px is the distance between elements. */
	top: 8px;
	z-index: 10000;
}

#hourglass img {
	width: 48px;
	height: 48px;
}

.section {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100vh;
}

.section.section-small {
	height: calc(100vh - 200px);
}

form, .cont {
	display: flex;
	flex-direction: column;
	align-items: center;
}

form table {
	border-spacing: 0.5em;
	margin: auto;
}

form tbody th {
	text-align: right;
	vertical-align: baseline;
}

form tbody td {
	text-align: left;
	vertical-align: baseline;
	position: relative;
}

form tfoot td {
	text-align: center;
	padding-top: 1em;
}

form label.error {
	display: block;
	position: absolute;
	top: 3em;
	left: -8px;
	width: 100%;
	text-align: right;
	font-size: 50%;
	color: red;
}

.shell {
	z-index: 1000;
}

.shell-tool {
	margin-top: 8px;
}

.avanty button.shell-tool.button-icon {
	padding: 8px;
}

.avanty button.shell-tool img {
	position: static;
	vertical-align: middle;
}

.shell-logout {
	position: absolute;
	left: calc(100vw - 58px);
}

